Changed the buttons to link

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,20 +7,20 @@
       </h1>
       <ul class="hero__ul">
         <li class="hero__list">
-          <button
-            type="button"
-            class="button hero__button button--color__cherry button--with-accent-hover"
+          <a
+            href="#products"
+            class="button link hero__button button--color__cherry button--with-accent-hover"
           >
             Products
-          </button>
+          </a>
         </li>
         <li class="hero__list">
-          <button
-            type="button"
-            class="button hero__button button--color__white button--with-hover"
+          <a
+            href="#about"
+            class="button link hero__button button--color__white button--with-hover"
           >
-            How it’s made?
-          </button>
+            How it’s made?</a
+          >
         </li>
       </ul>
       <div class="hero__text--wrap">
@@ -28,7 +28,11 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
-        <button class="button hero__text-button" type="button">
+        <a
+          target="_blank"
+          href="https://www.youtube.com/watch?v=q27ltn0jtxQ"
+          class="button hero__text-button button--with-hover"
+        >
           <svg
             class="icon hero__text-button--color__cherry"
             width="18"
@@ -36,7 +40,7 @@
           >
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
-        </button>
+        </a>
       </div>
     </div>
     <div class="count__wrap">
