--- a/src/sass/hero/_hero.scss
+++ b/src/sass/hero/_hero.scss
@@ -141,6 +141,10 @@
 .button--color__cherry {
   background-color: $accent-color;
   color: $primary-inverse-text-color;
+  &:hover,
+  &:focus {
+    color: $primary-inverse-text-color;
+  }
 }
 
 .button--color__white {
@@ -149,22 +153,19 @@
 }
 .hero__button {
   display: block;
+  font-weight: 400;
   font-size: 8px;
   line-height: 1.25;
   box-sizing: border-box;
-  height: 24px;
+  padding: 7px 14px;
 
   @media screen and (min-width: $desktop) {
-    height: 40px;
     font-size: 14px;
     line-height: 1.28;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 11px 20px;
   }
-
-  padding-left: 14px;
-  padding-right: 14px;
 }
+
 .hero__text--wrap {
   margin-left: 152px;
   position: relative;
@@ -172,6 +173,7 @@
     margin-left: 215px;
   }
 }
+
 .hero__text {
   display: none;
   font-size: 8px;
@@ -197,6 +199,7 @@
   height: 18px;
   border-radius: 50%;
   background-color: $primary-background-color;
+
   @media screen and (min-width: $tablet) {
     display: flex;
   }
