focus-footer-links-commit

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,12 @@
     <div class="page-footer__contacts">
       <ul class="socials">
         <li class="socials__item">
-          <a class="socials__link link" href="" aria-label="github">
+          <a
+            class="socials__link link"
+            href="https://github.com/chertoha/ice-cream-project-group-28"
+            target="_blank"
+            aria-label="github"
+          >
             <svg class="icon page-footer__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-footer-github"></use>
             </svg>
@@ -16,7 +21,12 @@
         </li>
 
         <li class="socials__item">
-          <a class="socials__link link" href="" aria-label="telegram">
+          <a
+            class="socials__link link"
+            href="https://t.me/junior_developer_ua"
+            target="_blank"
+            aria-label="telegram"
+          >
             <svg class="icon page-footer__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-footer-telegram"></use>
             </svg>
@@ -24,7 +34,12 @@
         </li>
 
         <li class="socials__item">
-          <a class="socials__link link" href="" aria-label="facebook">
+          <a
+            class="socials__link link"
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+            aria-label="facebook"
+          >
             <svg class="icon page-footer__icon" width="20" height="20">
               <use href="./images/icons.svg#icon-footer-facebook"></use>
             </svg>
