--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,60 +1,59 @@
 <section class="section products">
   <div class="container">
-
     <p class="products__label">100% natural</p>
     <h2 class="products__title">products</h2>
 
-
     <ul class="products__list">
-
       <li class="card__wrapper card__wrapper--ice">
-
         <h3 class="products__subtitle">ice cream</h3>
         <p class="products__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua
-          facilisis.
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="products__button button button--with-hover">
+        <button
+          js-overlay-button
+          type="button"
+          class="products__button button button--with-hover"
+        >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
         </button>
-
       </li>
 
       <li class="card__wrapper card__wrapper--coffee">
-
         <h3 class="products__subtitle">ice coffee</h3>
         <p class="products__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua
-          facilisis.
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="products__button button button--with-hover">
+        <button
+          js-overlay-button
+          type="button"
+          class="products__button button button--with-hover"
+        >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
         </button>
-
       </li>
 
       <li class="card__wrapper card__wrapper--shakes">
-
         <h3 class="products__subtitle">milkshakes</h3>
         <p class="products__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua
-          facilisis.
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="products__button button button--with-hover">
+        <button
+          js-overlay-button
+          type="button"
+          class="products__button button button--with-hover"
+        >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
         </button>
-
       </li>
-
     </ul>
     <!-- 
     <ul class="products__list">
@@ -114,6 +113,5 @@
       </li>
     </ul>
   
-  -->
-  </div>
+  --></div>
 </section>
