--- a/src/sass/products/_product-description.scss
+++ b/src/sass/products/_product-description.scss
@@ -28,7 +28,7 @@
         padding-left: 32px;
         padding-right: 32px;
     }
-    
+
     @media screen and (min-width:$desktop) {
         flex-basis: calc((100% - 64px) / 3);
         padding-top: 165px;
@@ -41,10 +41,10 @@
 .card__wrapper:not(:last-child) {
     @media screen and (max-width:$mobile-max) {
         margin-bottom: 140px;
-    } 
+    }
 }
 
-        //Pink
+//Pink
 
 .card__wrapper--ice {
     background-color: #FFB8CA;
@@ -102,7 +102,7 @@
 }
 
 
-        //Brown
+//Brown
 
 .card__wrapper--coffee {
     background-color: #F0D1A5;
@@ -160,7 +160,7 @@
 }
 
 
-        //Green
+//Green
 
 .card__wrapper--shakes {
     background-color: #C2E297;
@@ -199,6 +199,7 @@
             background-image: url(../images/products/tablet/prod-shakes-tab-x2.png);
         }
     }
+
     @media screen and (min-width:$desktop) {
         top: -261px;
         width: 368px;
@@ -217,6 +218,32 @@
 
 
 
+.products__meta {
+    position: relative;
 
+}
 
+.products__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
+    padding: 40px 20px 0 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    transform: translateX(-100%);
+
+    background-color: teal;
+
+    transition: transform $default-transition-time $default-transition-function;
+
+    &--start {
+        transform: translateX(0);
+    }
+
+}
