--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,20 +5,39 @@
 
     <ul class="products__list">
       <li class="card__wrapper card__wrapper--ice">
-        <h3 class="products__subtitle">ice cream</h3>
-        <p class="products__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
-        </p>
-        <button
-          js-overlay-button
-          type="button"
-          class="products__button button button--with-hover"
-        >
-          <svg class="icon button__arrow--products" width="18" height="12">
-            <use href="./images/icons.svg#icon-arrow-products"></use>
-          </svg>
-        </button>
+        <div class="products__meta">
+          <h3 class="products__subtitle">ice cream</h3>
+          <p class="products__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+          <button
+            js-overlay-start
+            type="button"
+            class="products__button button button--with-hover"
+          >
+            <svg class="icon button__arrow--products" width="18" height="12">
+              <use href="./images/icons.svg#icon-arrow-products"></use>
+            </svg>
+          </button>
+          <div class="products__overlay">
+            <p class="products__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et. dolore magna aliqua
+              facilisis.
+            </p>
+            <button
+              js-overlay-return
+              type="button"
+              class="products__button button button--with-hover"
+            >
+              <svg class="icon button__arrow--products" width="18" height="12">
+                <use href="./images/icons.svg#icon-arrow-products"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </li>
 
       <li class="card__wrapper card__wrapper--coffee">
