--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
             href="#products"
             class="button link hero__button button--color__cherry button--with-accent-hover"
           >
-            Products
+            <span class="hero__button-text">Products</span>
           </a>
         </li>
         <li class="hero__list">
@@ -19,8 +19,8 @@
             href="#about"
             class="button link hero__button button--color__white button--with-hover"
           >
-            How it’s made?</a
-          >
+            <span class="hero__button-text">How it’s made?</span>
+          </a>
         </li>
       </ul>
       <div class="hero__text--wrap">
@@ -33,11 +33,7 @@
           href="https://www.youtube.com/watch?v=q27ltn0jtxQ"
           class="button hero__text-button button--with-hover"
         >
-          <svg
-            class="icon hero__text-button--color__cherry"
-            width="18"
-            height="12"
-          >
+          <svg class="icon hero__icon hero__text-button--color__cherry">
             <use href="./images/icons.svg#icon-arrow-products"></use>
           </svg>
         </a>
@@ -46,11 +42,11 @@
     <div class="count__wrap">
       <ul class="count__ul">
         <li class="count__list">
-          <p class="count__number">16</p>
+          <p class="count__number" id="cafes-count" data-cafes-count="16">0</p>
           <p class="count__text">cafes</p>
         </li>
         <li class="count__list">
-          <p class="count__number">23</p>
+          <p class="count__number" id="trucks-count" data-truck-count="23">0</p>
           <p class="count__text">food trucks</p>
         </li>
       </ul>
