adds for animation and modals

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
       </svg>
     </button>
 
-    <button data-model-open class="header__tb-btn button button--with-hover" type="button">
+    <button data-header-model-open class="header__tb-btn button button--with-hover" type="button">
       <span class="header__tb-text">Buy now</span>
       <svg class="header__tb-icon" width="15" height="20">
         <use href="./images/icons.svg#icon-arrow-common"></use>
@@ -25,7 +25,7 @@
           </svg>
         </button>
 
-        <button data-modal-open class="header__buy-btn button button--with-hover" type="button">
+        <button id="animated-button" data-modal-open class="header__buy-btn button button--with-hover" type="button">
           <span class="header__buy-text">Buy now</span>
           <svg class="header__buy-icon" width="15" height="20">
             <use href="./images/icons.svg#icon-arrow-common"></use>
