--- a/src/sass/header/_page-header.scss
+++ b/src/sass/header/_page-header.scss
@@ -180,8 +180,8 @@
 
     text-align: center;
     justify-content: center;
+    align-items: center;
 
-    padding-top: 12px;
     margin-top: 60px;
     margin-left: 20px;
     margin-right: 20px;
@@ -295,10 +295,7 @@
 
     text-align: center;
     justify-content: center;
-
-
-    padding-top: 12px;
-
+    align-items: center;
 
     height: 44px;
     width: 186px;
