--- a/src/sass/products/_product-description.scss
+++ b/src/sass/products/_product-description.scss
@@ -220,7 +220,7 @@
 
 .products__meta {
     position: relative;
-
+    overflow: hidden;
 }
 
 .products__overlay {
@@ -230,7 +230,7 @@
     width: 100%;
     height: 100%;
 
-    padding: 40px 20px 0 20px;
+    // padding: 40px 20px 0 20px;
 
     display: flex;
     flex-direction: column;
@@ -238,9 +238,11 @@
 
     transform: translateX(-100%);
 
-    background-color: teal;
+    // background-color: teal;
 
     transition: transform $default-transition-time $default-transition-function;
+
+
 
     &--start {
         transform: translateX(0);
