Added hover text on img

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,6 +32,7 @@
           target="_blank"
           href="https://www.youtube.com/watch?v=q27ltn0jtxQ"
           class="button hero__text-button button--with-hover"
+          data-modal-milkvideo
         >
           <svg class="icon hero__icon hero__text-button--color__cherry">
             <use href="./images/icons.svg#icon-arrow-products"></use>
@@ -49,6 +50,11 @@
           <p class="count__number" id="trucks-count" data-truck-count="23">0</p>
           <p class="count__text">food trucks</p>
         </li>
+        <div class="hover__text--wrap">
+          <p class="hover__text">
+            glory to <span class="hover__text--blue">ukraine!</span>
+          </p>
+        </div>
       </ul>
     </div>
   </div>
