--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -57,7 +57,7 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="link header__nav-link" href="#hero">Home</a>
+              <a class="header__nav-link link header__scroll-current" href="#hero" data-color>Home</a>
             </li>
             <li class="header__nav-item">
               <a class="header__nav-link link" href="#about-us">About us</a>
