--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -7,25 +7,38 @@
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
         </button>
-        <h2 class="mob-menu-modal__heading">Choose what you like</h2>
+        <h2 class="mob-menu-modal__heading">Choose the icecream you like:</h2>
         <ul class="mob-menu-modal__products-list">
             <li class="mob-menu-modal__product-card">
                 <h3>Ice Coffee</h3>
-                <img src="./images/gallery/tablet/gall-nine-koffee-tab-x1.png" alt="">
-                <div class="mob-menu__modal--stepper">
-                    <span class="stepper">
-                        <button class="minus-button">–</button>
-                        <input class="products-counter" type="number" value="0" min="0" max="100" step="1" readonly>
-                        <button class="plus-button">+</button>
-                    </span>
-                </div>
-            </li>
-            <li class="mob-menu-modal__product-card">
-                <h3>Icecream1</h3>
-                <img src="./images/gallery/tablet/gall-seven-icehand-tab-x1.png" alt="">
+                <picture>
+                    <source srcset="
+                                      ./images/gallery/mobile/WpcMb-9.webp      44w,
+                                      ./images/gallery/mobile/WpcMb2x-9.webp    88w,
+                                      ./images/gallery/tablet/WpcTb-9.webp     105w,
+                                      ./images/gallery/desktop/WpcDsk-9.webp   138w,
+                                      ./images/gallery/tablet/WpcTb2x-9.webp   210w,
+                                      ./images/gallery/desktop/WpcDsk2x-9.webp 276w,
+                                      ./images/gallery/tablet/WpcTb3x-9.webp   314w,
+                                      ./images/gallery/desktop/WpcDsk3x-9.webp 414w
+                                    " type="image/webp"
+                        sizes="(min-width: 1200px) 25vw, (min-width: 320px) 28vw, (max-width: 319px) 90vw" />
 
-                <div class="mob-menu__modal--stepper">
-                    <span class="stepper">
+                    <img srcset="
+                                      ./images/gallery/mobile/gall-nine-koffee-mob-x1.png   44w,
+                                      ./images/gallery/mobile/gall-nine-koffee-mob-x2.png   88w,
+                                      ./images/gallery/tablet/gall-nine-koffee-tab-x1.png  105w,
+                                      ./images/gallery/tablet/gall-nine-koffee-tab-x2.png  210w,
+                                      ./images/gallery/desktop/gall-nine-koffee-des-x1.png 138w,
+                                      ./images/gallery/desktop/gall-nine-koffee-des-x2.png 276w,
+                                      ./images/gallery/tablet/pcTb3x-9.png                 314w,
+                                      ./images/gallery/desktop/pcDsk3x-9.png               414w
+                                    " src="./images/gallery/desktop/gall-nine-koffee-des-x1.png" alt="ice cream"
+                        width="108"
+                        sizes="(min-width: 1200px) 12vw, (min-width: 320px) 14vw, (max-width: 319px) 90vw" />
+                </picture>
+                <div class="mob-menu-modal__stepper-container">
+                    <span class="mob-menu-modal__stepper">
                         <button class="minus-button">–</button>
                         <input class="products-counter" type="number" value="0" min="0" max="100" step="1" readonly>
                         <button class="plus-button">+</button>
@@ -33,10 +46,72 @@
                 </div>
             </li>
             <li class="mob-menu-modal__product-card">
-                <h3>Icecream2</h3>
-                <img src="./images/gallery/tablet/gall-three-icelolly-tab-x1.png" alt="">
-                <div class="mob-menu__modal--stepper">
-                    <span class="stepper">
+                <h3>Strawberry</h3>
+                <picture>
+                    <source srcset="
+                                      ./images/gallery/mobile/WpcMb-7.webp      44w,
+                                      ./images/gallery/mobile/WpcMb2x-7.webp    88w,
+                                      ./images/gallery/tablet/WpcTb-7.webp     105w,
+                                      ./images/gallery/desktop/WpcDsk-7.webp   138w,
+                                      ./images/gallery/tablet/WpcTb2x-7.webp   210w,
+                                      ./images/gallery/desktop/WpcDsk2x-7.webp 276w,
+                                      ./images/gallery/tablet/WpcTb3x-7.webp   314w,
+                                      ./images/gallery/desktop/WpcDsk3x-7.webp 414w
+                                    " type="image/webp"
+                        sizes="(min-width: 1200px) 25vw, (min-width: 320px) 28vw, (max-width: 319px) 90vw" />
+
+                    <img srcset="
+                                      ./images/gallery/mobile/gall-seven-icehand-mob-x1.png   44w,
+                                      ./images/gallery/mobile/gall-seven-icehand-mob-x2.png   88w,
+                                      ./images/gallery/tablet/gall-seven-icehand-tab-x1.png  105w,
+                                      ./images/gallery/tablet/gall-seven-icehand-tab-x2.png  210w,
+                                      ./images/gallery/desktop/gall-seven-icehand-des-x1.png 138w,
+                                      ./images/gallery/desktop/gall-seven-icehand-des-x2.png 276w,
+                                      ./images/gallery/tablet/pcTb3x-7.png                   314w,
+                                      ./images/gallery/desktop/pcDsk3x-7.png                 414w
+                                    " src="./images/gallery/desktop/gall-seven-icehand-des-x1.png" alt="ice cream"
+                        width="108"
+                        sizes="(min-width: 1200px) 12vw, (min-width: 320px) 14vw, (max-width: 319px) 90vw" />
+                </picture>
+
+                <div class="mob-menu-modal__stepper-container">
+                    <span class="mob-menu-modal__stepper">
+                        <button class="minus-button">–</button>
+                        <input class="products-counter" type="number" value="0" min="0" max="100" step="1" readonly>
+                        <button class="plus-button">+</button>
+                    </span>
+                </div>
+            </li>
+            <li class="mob-menu-modal__product-card">
+                <h3>Raspberry</h3>
+                <picture>
+                    <source srcset="
+                                      ./images/gallery/mobile/WpcMb-2.webp      44w,
+                                      ./images/gallery/mobile/WpcMb2x-2.webp    88w,
+                                      ./images/gallery/tablet/WpcTb-2.webp     105w,
+                                      ./images/gallery/desktop/WpcDsk-2.webp   138w,
+                                      ./images/gallery/tablet/WpcTb2x-2.webp   210w,
+                                      ./images/gallery/desktop/WpcDsk2x-2.webp 276w,
+                                      ./images/gallery/tablet/WpcTb3x-2.webp   314w,
+                                      ./images/gallery/desktop/WpcDsk3x-2.webp 414w
+                                    " type="image/webp"
+                        sizes="(min-width: 1200px) 25vw, (min-width: 320px) 28vw, (max-width: 319px) 90vw" />
+
+                    <img srcset="
+                                      ./images/gallery/mobile/gall-three-icelolly-mob-x1.png   44w,
+                                      ./images/gallery/mobile/gall-three-icelolly-mob-x2.png   88w,
+                                      ./images/gallery/tablet/gall-three-icelolly-tab-x1.png  105w,
+                                      ./images/gallery/desktop/gall-three-icelolly-des-x1.png 138w,
+                                      ./images/gallery/tablet/gall-three-icelolly-tab-x2.png  210w,
+                                      ./images/gallery/desktop/gall-three-icelolly-des-x2.png 276w,
+                                      ./images/gallery/tablet/pcTb3x-2.png                    314w,
+                                      ./images/gallery/desktop/pcDsk3x-2.png                  414w
+                                    " src="./images/gallery/desktop/gall-three-icelolly-des-x1.png"
+                        alt="three-icelolly" width="108"
+                        sizes="(min-width: 1200px) 12vw, (min-width: 320px) 14vw, (max-width: 319px) 90vw" />
+                </picture>
+                <div class="mob-menu-modal__stepper-container">
+                    <span class="mob-menu-modal__stepper">
                         <button class="minus-button">–</button>
                         <input type="number" class="products-counter" value="0" min="0" max="100" step="1" readonly>
                         <button class="plus-button">+</button>
@@ -44,10 +119,35 @@
                 </div>
             </li>
             <li class="mob-menu-modal__product-card">
-                <h3>Icecream3</h3>
-                <img src="./images/gallery/tablet/gall-two-ice-tab-x1.png" alt="">
-                <div class="mob-menu__modal--stepper">
-                    <span class="stepper">
+                <h3>Banana Mix</h3>
+                <picture>
+                    <source srcset="
+                                      ./images/gallery/mobile/WpcMb-3.webp      44w,
+                                      ./images/gallery/mobile/WpcMb2x-3.webp    88w,
+                                      ./images/gallery/tablet/WpcTb-3.webp     105w,
+                                      ./images/gallery/desktop/WpcDsk-3.webp   138w,
+                                      ./images/gallery/tablet/WpcTb2x-3.webp   210w,
+                                      ./images/gallery/desktop/WpcDsk2x-3.webp 276w,
+                                      ./images/gallery/tablet/WpcTb3x-3.webp   314w,
+                                      ./images/gallery/desktop/WpcDsk3x-3.webp 414w
+                                    " type="image/webp"
+                        sizes="(min-width: 1200px) 25vw, (min-width: 320px) 28vw, (max-width: 319px) 90vw" />
+
+                    <img srcset="
+                                      ./images/gallery/mobile/gall-two-ice-mob-x1.png   44w,
+                                      ./images/gallery/mobile/gall-two-ice-mob-x2.png   88w,
+                                      ./images/gallery/tablet/gall-two-ice-tab-x1.png  105w,
+                                      ./images/gallery/desktop/gall-two-ice-des-x1.png 138w,
+                                      ./images/gallery/tablet/gall-two-ice-tab-x2.png  210w,
+                                      ./images/gallery/desktop/gall-two-ice-des-x2.png 276w,
+                                      ./images/gallery/tablet/pcTb3x-3.png             314w,
+                                      ./images/gallery/desktop/pcDsk3x-3.png           414w
+                                    " src="./images/gallery/desktop/gall-two-ice-des-x1.png" alt="ice cream"
+                        width="108"
+                        sizes="(min-width: 1200px) 12vw, (min-width: 320px) 14vw, (max-width: 319px) 90vw" />
+                </picture>
+                <div class="mob-menu-modal__stepper-container">
+                    <span class="mob-menu-modal__stepper">
                         <button class="minus-button">–</button>
                         <input type="number" class="products-counter" value="0" min="0" max="100" step="1" readonly>
                         <button class="plus-button">+</button>
@@ -63,26 +163,6 @@
         </button>
     </div>
 </div>
-
-<!-- Hero Video Modal  -->
-
-<!-- <div class="modal-default-backdrop hero-modal__is-hidden" hero-modal>
-    <div class="hero-modal modal-default-container">
-        <div class="hero-modal__header-part">
-            <img src="./images/hero-header/logo.svg" alt="logo" class="header__logo" width="199" height="50" />
-            <button hero-modal-close class="modal-default-close-button">
-                <svg class="modal-default-close-icon">
-                    <use href="./images/icons.svg#products-close-button"></use>
-                </svg>
-            </button>
-        </div>
-        <iframe id="hero-modal__video" width="560" height="315" src="https://www.youtube.com/embed/-8MPE74pq4w"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </div>
-</div> -->
-
 
 <!-- About / Read More Modal  -->
 
