--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -12,32 +12,29 @@
             eiusmod tempor incididunt ut labore et. dolore magna aliqua
             facilisis.
           </p>
-          <button
-            js-overlay-start
-            type="button"
-            class="products__button button button--with-hover"
-          >
-            <svg class="icon button__arrow--products" width="18" height="12">
-              <use href="./images/icons.svg#icon-arrow-products"></use>
-            </svg>
-          </button>
+
           <div class="products__overlay">
-            <p class="products__text">
+            <p class="products__text products__text--overflow-hidden">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et. dolore magna aliqua
-              facilisis.
+              facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
+              aliqua facilisis. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
+              dolore magna aliqua facilisis.
             </p>
-            <button
-              js-overlay-return
-              type="button"
-              class="products__button button button--with-hover"
-            >
-              <svg class="icon button__arrow--products" width="18" height="12">
-                <use href="./images/icons.svg#icon-arrow-products"></use>
-              </svg>
-            </button>
           </div>
         </div>
+
+        <button
+          js-overlay-start
+          type="button"
+          class="products__button button button--with-hover"
+        >
+          <svg class="icon button__arrow--products" width="18" height="12">
+            <use href="./images/icons.svg#icon-arrow-products"></use>
+          </svg>
+        </button>
       </li>
 
       <li class="card__wrapper card__wrapper--coffee">
