--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -46,8 +46,8 @@
             facilisis.
           </p>
 
-          <div class="products__overlay">
-            <p class="products__text products__text--overflow-hidden">
+          <div class="products__overlay prescription">
+            <!-- <p class="products__text products__text--overflow-hidden">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et. dolore magna aliqua
               facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -55,7 +55,22 @@
               aliqua facilisis. Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
               dolore magna aliqua facilisis.
-            </p>
+            </p> -->
+
+            <h4 class="prescription-label">
+              Nutritional value for 100g of product:
+            </h4>
+            <ul class="prescription-list">
+              <li class="prescription__item">
+                <p class="prescription__value">carbohydrates - 2.5g</p>
+              </li>
+              <li class="prescription__item">
+                <p class="prescription__value">proteins - 0.5g,</p>
+              </li>
+              <li class="prescription__item">
+                <p class="prescription__value">fats - 0.02g</p>
+              </li>
+            </ul>
           </div>
         </div>
 
