--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -13,16 +13,23 @@
             facilisis.
           </p>
 
-          <div class="products__overlay">
-            <p class="products__text products__text--overflow-hidden">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et. dolore magna aliqua
-              facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
-              elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-              aliqua facilisis. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
-              dolore magna aliqua facilisis.
-            </p>
+          <div class="products__overlay prescription">
+            <h4 class="prescription-label">
+              Nutritional value for 100g of product:
+            </h4>
+            <ul class="prescription-list">
+              <li class="prescription__item">
+                <p class="prescription__value">carbohydrates - 2.3g</p>
+              </li>
+
+              <li class="prescription__item">
+                <p class="prescription__value">proteins - 0.4g,</p>
+              </li>
+
+              <li class="prescription__item">
+                <p class="prescription__value">fats - 0.12g</p>
+              </li>
+            </ul>
           </div>
         </div>
 
@@ -47,16 +54,6 @@
           </p>
 
           <div class="products__overlay prescription">
-            <!-- <p class="products__text products__text--overflow-hidden">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et. dolore magna aliqua
-              facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
-              elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-              aliqua facilisis. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
-              dolore magna aliqua facilisis.
-            </p> -->
-
             <h4 class="prescription-label">
               Nutritional value for 100g of product:
             </h4>
@@ -64,9 +61,11 @@
               <li class="prescription__item">
                 <p class="prescription__value">carbohydrates - 2.5g</p>
               </li>
+
               <li class="prescription__item">
                 <p class="prescription__value">proteins - 0.5g,</p>
               </li>
+
               <li class="prescription__item">
                 <p class="prescription__value">fats - 0.02g</p>
               </li>
@@ -94,16 +93,23 @@
             facilisis.
           </p>
 
-          <div class="products__overlay">
-            <p class="products__text products__text--overflow-hidden">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et. dolore magna aliqua
-              facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
-              elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-              aliqua facilisis. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
-              dolore magna aliqua facilisis.
-            </p>
+          <div class="products__overlay prescription">
+            <h4 class="prescription-label">
+              Nutritional value for 100g of product:
+            </h4>
+            <ul class="prescription-list">
+              <li class="prescription__item">
+                <p class="prescription__value">carbohydrates - 1.5g</p>
+              </li>
+
+              <li class="prescription__item">
+                <p class="prescription__value">proteins - 0.6g,</p>
+              </li>
+
+              <li class="prescription__item">
+                <p class="prescription__value">fats - 0.08g</p>
+              </li>
+            </ul>
           </div>
         </div>
 
