--- a/src/sass/products/_product-description.scss
+++ b/src/sass/products/_product-description.scss
@@ -244,9 +244,9 @@
 
     // padding: 40px 20px 0 20px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
 
     transform: translateX(-100%);
 
