--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="section hero">
+<section class="section hero" id="hero">
   <div class="container hero__container">
     <div>
       <h1 class="hero__title">
