--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -82,7 +82,7 @@
     <!--кнопки для локации отделений-->
     <ul class="contacts__btn-list">
       <li class="contacts__btn">
-        <button locations-modal-open class="button button--with-hover">
+        <button data-locations-modal-open class="button button--with-hover">
           <span class="contacts__btn-text">Our Locations</span>
           <svg class="contacts__icon" width="15" height="20">
             <use href="./images/icons.svg#icon-arrow-common"></use>
@@ -90,7 +90,7 @@
         </button>
       </li>
       <li class="contacts__btn">
-        <button franchise-modal-open class="button button--with-hover">
+        <button data-franchise-modal-open class="button button--with-hover">
           <span class="contacts__btn-text">Franchise</span>
           <svg class="contacts__icon" width="15" height="20">
             <use href="./images/icons.svg#icon-arrow-common"></use>
