Изменяет марджин для h3

--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -66,6 +66,8 @@
     @media screen and (min-width:$desktop) {
         font-size: 30px;
         line-height: 1.13;
+
+        margin-bottom: 84px;
     }
 }
 
