--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'DM Sans', sans-serif;
     font-size: 14px;
@@ -23,6 +27,5 @@ ul {
 }
 
 .body.no-scroll {
-  overflow: hidden;
+    overflow: hidden;
 }
-
