--- a/src/sass/about/_about.scss
+++ b/src/sass/about/_about.scss
@@ -13,6 +13,7 @@
     background-position: 50% 77%;
     background-repeat: no-repeat;
     background-size: 1200px;
+    padding-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
@@ -88,6 +89,9 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .about__img {
