--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -57,7 +57,7 @@
       </ul>
       <div class="hero__hover-wrap">
         <p class="hero__hover-text">
-          glory to <span class="hero__hover-blue">ukraine!</span>
+          glory to <span class="hero__hover-yellow">ukraine!</span>
         </p>
       </div>
     </div>
