--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -166,11 +166,11 @@
 
 <!-- About / Read More Modal  -->
 
-<div class="modal-default-backdrop about-modal__is-hidden" about-modal>
+<div class="modal-default-backdrop about-modal__is-hidden" data-about-modal>
     <div class="about-modal modal-default-container">
         <div class="about-modal__header-part">
             <img src="./images/hero-header/logo.svg" alt="logo" class="header__logo" width="199" height="50" />
-            <button about-modal-close class="modal-default-close-button">
+            <button data-about-modal-close class="modal-default-close-button">
                 <svg class="modal-default-close-icon">
                     <use href="./images/icons.svg#products-close-button"></use>
                 </svg>
@@ -249,9 +249,9 @@
 
 <!-- Contacts / Locations Modal  -->
 
-<div class="modal-default-backdrop locations-modal__is-hidden" locations-modal>
+<div class="modal-default-backdrop locations-modal__is-hidden" data-locations-modal>
     <div class="locations-modal modal-default-container">
-        <button locations-modal-close class="modal-default-close-button">
+        <button data-locations-modal-close class="modal-default-close-button">
             <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
@@ -277,7 +277,7 @@
                 <h4 class="locations-modal__sale-place">Mercedes Platz</h4>
                 <span class="locations-modal__sale-address">Mühlenstraße 5, 10243 Berlin, Germany</span>
                 <a class="locations-modal__sale-address-link" href="https://goo.gl/maps/5JnRTD1Htr5awVuFA"
-                    type="_blank">how
+                    target="_blank">how
                     to find</a>
             </li>
             <li class="locations-modal__address-card">
@@ -293,9 +293,9 @@
 
 <!-- Contacts / Franchise Modal  -->
 
-<div class="modal-default-backdrop franchise-modal__is-hidden" franchise-modal>
+<div class="modal-default-backdrop franchise-modal__is-hidden" data-franchise-modal>
     <div class="franchise-modal modal-default-container">
-        <button franchise-modal-close class="modal-default-close-button">
+        <button data-franchise-modal-close class="modal-default-close-button">
             <svg class="modal-default-close-icon">
                 <use href="./images/icons.svg#products-close-button"></use>
             </svg>
