--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -66,8 +66,6 @@
     @media screen and (min-width:$desktop) {
         font-size: 30px;
         line-height: 1.13;
-
-        margin-bottom: 84px;
     }
 }
 
@@ -127,4 +125,8 @@
     top: 32px;
     left: 50%;
     transform: translate(-50%);
+
+    @media screen and (min-width:$desktop) {
+        top: 45px;
+    }
 }
