--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,5 +1,5 @@
 <section class="section features">
-  <h2 class="visually-hidden">Наши преимущества</h2>
+  <h2 class="visually-hidden">Our features</h2>
   <div class="container">
     <ul class="features__list">
       <li class="features__item features__item--cup">
