--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -34,7 +34,7 @@
         </div>
 
         <button
-          js-overlay-start
+          data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
         >
@@ -74,7 +74,7 @@
         </div>
 
         <button
-          js-overlay-start
+          data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
         >
@@ -114,7 +114,7 @@
         </div>
 
         <button
-          js-overlay-start
+          data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
         >
