--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section id="about" class="section about">
   <div class="container">
     <p class="about__header">TRADITION AND LOVE</p>
     <h2 class="about__title">HOW IT`S MADE?</h2>
