--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -57,19 +57,32 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a class="header__nav-link link header__scroll-current" href="#hero" data-color>Home</a>
+              <a
+                class="header__nav-link link header__scroll-current link-close-menu"
+                href="#hero"
+                data-color
+                >Home</a
+              >
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="#about-us">About us</a>
+              <a class="header__nav-link link link-close-menu" href="#about-us"
+                >About us</a
+              >
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="#about">How it's made?</a>
+              <a class="header__nav-link link link-close-menu" href="#about"
+                >How it's made?</a
+              >
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="#products">Our products</a>
+              <a class="header__nav-link link link-close-menu" href="#products"
+                >Our products</a
+              >
             </li>
             <li class="header__nav-item">
-              <a class="header__nav-link link" href="#contacts">Contacts</a>
+              <a class="header__nav-link link link-close-menu" href="#contacts"
+                >Contacts</a
+              >
             </li>
           </ul>
         </nav>
