--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -37,6 +37,7 @@
           data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
+          aria-label="Toggle overlay"
         >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
@@ -77,6 +78,7 @@
           data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
+          aria-label="Toggle overlay"
         >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
@@ -117,6 +119,7 @@
           data-js-overlay-start
           type="button"
           class="products__button button button--with-hover"
+          aria-label="Toggle overlay"
         >
           <svg class="icon button__arrow--products" width="18" height="12">
             <use href="./images/icons.svg#icon-arrow-products"></use>
